contrôle formulaire login et signup

--- a/src/app/modules/public/legal.html
+++ b/src/app/modules/public/legal.html
@@ -17,7 +17,7 @@
         </p>
 
         <p>
-            <strong>Propriétaire</strong> : Qaobee – SARL – 20 Rue Cuirassé Bretagne, 29200 Brest, France<br/> <strong>Créateur</strong>
+            <strong>Propriétaire</strong> : Qaobee – SARL – 45 allée parc ar groas, 29280 Plouzane, France<br/> <strong>Créateur</strong>
             : <a href="www.qaobee.com">Qaobee</a><br/> <strong>Responsable
             publication</strong> : Qaobee – <a href="mailto:contact@qaobee.com">contact@qaobee.com</a><br/>
             <strong>Webmaster</strong> : Qaobee – <a href="mailto:contact@qaobee.com">contact@qaobee.com</a><br/>
